# m0untain

./: .gitattributes  .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
core/: Cargo.toml
core/src/: config.rs  event.rs  lib.rs  metrics.rs  pipeline.rs
core/src/detect/: mod.rs  ratelimit.rs  scan.rs
service/: Cargo.toml
service/src/: lib.rs  main.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: active_connections.rs  main.rs  settings.rs
src-tauri/src/wfp/: mod.rs  sim.rs  windows_impl.rs
ui/: index.html
