[package]
name = "sentinel-core"
version = "0.1.0"
edition = "2021"
description = "Platform-independent firewall detection engine (DDoS rate-limiting + port-scan detection), config, event model and rolling metrics."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lib]
name = "sentinel_core"
path = "src/lib.rs"
