[package]
name = "m0untain-service"
version = "0.1.0"
edition = "2021"
description = "Windows service scaffold for m0untain default-deny firewall enforcement"

[lib]
name = "m0untain_service"
path = "src/lib.rs"

[[bin]]
name = "m0untain-service"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_WindowsFilteringPlatform",
    "Win32_System_Rpc",
    "Win32_System_Services",
    "Win32_Security",
] }
